--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ag-grid-react": "^30.0.2",
     "firebase": "^9.23.0",
     "firebase-react-hooks": "^0.8.0",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -20,7 +21,8 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
