--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^30.0.2",
     "ag-grid-react": "^30.0.2",
+    "antd": "^5.6.4",
     "firebase": "^9.23.0",
     "firebase-react-hooks": "^0.8.0",
     "formik": "^2.4.2",
