--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.23.0",
     "firebase-react-hooks": "^0.8.0",
     "formik": "^2.4.2",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
