--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@ant-design/icons": "^5.1.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/lab": "^5.0.0-alpha.135",
     "@mui/x-date-pickers": "^6.9.1",
     "@testing-library/jest-dom": "^5.16.5",
