--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,6 +3,8 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
+env: 
+  CI: ""
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
@@ -10,8 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: (npm ci && npm run build)
-      - env: 
-          CI: ""
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
