--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -5,6 +5,9 @@ name: Deploy to Firebase Hosting on PR
 'on': pull_request
 env:
     CI: ''
+    REACT_APP_APIKEY: '${{ secrets.REACT_APP_APIKEY }}'
+    REACT_APP_AUTHDOMAIN: '${{ secrets.REACT_APP_AUTHDOMAIN }}'
+    REACT_APP_PROJECTID: '${{ secrets.REACT_APP_PROJECTID }}'
 jobs:
     build_and_preview:
         if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
