--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,11 @@ name: Deploy to Firebase Hosting on merge
     push:
         branches:
             - master
+env:
+    CI: ''
+    REACT_APP_APIKEY: '${{ secrets.REACT_APP_APIKEY }}'
+    REACT_APP_AUTHDOMAIN: '${{ secrets.REACT_APP_AUTHDOMAIN }}'
+    REACT_APP_PROJECTID: '${{ secrets.REACT_APP_PROJECTID }}'
 jobs:
     build_and_deploy:
         runs-on: ubuntu-latest
